--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -39,10 +39,20 @@ ocean_trees_fields_pond_field_lake_city_view_desktop_1680x1050_hd-wallpaper-8581
 ocean_trees_fields_pond_field_lake_city_view_desktop_1680x1050_hd-wallpaper-858141/index.jpg: ocean_trees_fields_pond_field_lake_city_view_desktop_1680x1050_hd-wallpaper-858141-d15e1da90a6a1875db5e2512aff693bf.jpg
 rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-application.js: application-08ad9199f0ae9bceec0ddb6780ba2fcf.js
-application/index.js: application-08ad9199f0ae9bceec0ddb6780ba2fcf.js
-application.css: application-d3fc8152b28553697cc5282e2f0b0fc3.css
-application/index.css: application-d3fc8152b28553697cc5282e2f0b0fc3.css
+application.js: application-bcbff1db1e9f60b63ae0c9c4205d7c75.js
+application/index.js: application-bcbff1db1e9f60b63ae0c9c4205d7c75.js
+jquery.easing.1.3.js: jquery.easing.1.3-0987386203a340ff4aa227f8aa02dcda.js
+jquery/index.easing.1.3.js: jquery.easing.1.3-0987386203a340ff4aa227f8aa02dcda.js
+jquery.liquid-slider.js: jquery.liquid-slider-da9b058c35d5c1f0357572749d5437b0.js
+jquery/index.liquid-slider.js: jquery.liquid-slider-da9b058c35d5c1f0357572749d5437b0.js
+jquery.liquid-slider.min.js: jquery.liquid-slider.min-9997cac83068fe0567a8d313c9fe6e1f.js
+jquery/index.liquid-slider.min.js: jquery.liquid-slider.min-9997cac83068fe0567a8d313c9fe6e1f.js
+jquery.stickyFooter.js: jquery.stickyFooter-3897071bd37d4d231b74fe29687e7a64.js
+jquery/index.stickyFooter.js: jquery.stickyFooter-3897071bd37d4d231b74fe29687e7a64.js
+jquery.touchSwipe.min.js: jquery.touchSwipe.min-6de5d9ec71814a16a5a632a6d16aae4c.js
+jquery/index.touchSwipe.min.js: jquery.touchSwipe.min-6de5d9ec71814a16a5a632a6d16aae4c.js
+application.css: application-e82b781a42c9777b7071211dd1620a77.css
+application/index.css: application-e82b781a42c9777b7071211dd1620a77.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 accessibility_foundicons.eot: accessibility_foundicons-de4ded15ef67a810e56439914e291834.eot
